2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
	  src/connection-editor/page-ip4.c
		- Add entry for DHCP Client ID

2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
	  src/Makefile.am
		- (find_auth_dialog_binary): expect VPN auth dialog to be in $LIBEXECDIR

2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
	  src/connection-editor/Makefile.am
		- (vpn_get_plugins): expect VPN GUI plugins to be in $LIBDIR

2008-07-02  Tambet Ingo  <tambet@gmail.com>

	Patch from André Lemos <alemos@criticalsoftware.com>

	* src/gconf-helpers/nma-gconf-settings.c 
	(nma_gconf_settings_add_connection):
	* src/connection-editor/nm-connection-list.c (show_error_dialog):
	* src/applet.c (applet_settings_new_secrets_requested_cb): 
	* src/applet-device-wired.c (get_pppoe_secrets_cb)
	(get_8021x_secrets_cb): 
	* src/applet-device-wifi.c (get_secrets_dialog_response_cb): 
	* src/applet-device-gsm.c (get_gsm_secrets_cb): Always send a format
	string to vararg message functions.

2008-07-01  Dan Williams <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (applet_settings_new_secrets_requested_cb): pass hints to device
			subclass

	* src/applet-device-wifi.c
	  src/applet-device-wired.c
		- (wireless_get_secrets, wired_get_secrets): update for 'hints' argument

	* src/applet-device-gsm.c
		- (gsm_get_secrets): use hints to determine which secret (PIN, PUK, or
			PPP password) NM is requesting
		- (ask_for_password): ask for PPP password when required
		- (ask_for_pin_puk): handle PUK too
		- (get_gsm_secrets_cb): handle all of PIN, PUK, and PPP password

	* src/applet-device-cdma.c
		- (cdma_get_secrets, ask_for_password, get_cdma_secrets_cb): handle PPP
			passwords

2008-06-26  Dan Williams <dcbw@redhat.com>

	* Update FSF address in license headers (Michael Biebl <biebl@debian.org>)

2008-06-26  Dan Williams  <dcbw@redhat.com>

	* src/applet.c