@@ -1,3 +1,9 @@
+2008-07-07  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ip4.c
+	  src/applet-dialogs.c
+		- Update for change from netmask -> prefix (requires NM svn3812 or later)
+
 2008-07-03  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/ce-page-ip4.glade
